2013-12-22  Eli Zaretskii  <eliz@gnu.org>

	* unidata/unidata-gen.el (unidata-split-name): Don't give any NAME
	to <control> characters: the Unicode Standard says they have no
	name.  (Bug#16216)
	(unidata-describe-bidi-class): Add new "isolate" classes
	introduced by Unicode 6.3.

2013-12-12  David Engster  <deng@randomsample.de>

	* grammars/c.by (expr-binop): Add MOD.
	(variablearg): Add 'opt-assign'.
	(variablearg, varnamelist): Add default values so that it can be
	later expanded into the tag.
	(opt-stuff-after-symbol): Rename to 'brackets-after-symbol' and
	remove empty match.
	(multi-stage-dereference): Adapt to above rename.
	(unaryexpression): Use 'symbol' instead of 'namespace-symbol',
	since the latter also leads to an empty match at the end which
	would make this too greedy.
	(variablearg-opt-name): Support parsing of function pointers
	inside an argument list.

2013-12-12  Glenn Morris  <rgm@gnu.org>

	* update_autogen (info_dir):
	Use dir_top from build-aux/ rather than admin/.

	* update_autogen: Add option to generate info/dir.
	(Usage): Add -I.
	(info_flag): New variable.
	(-I): New option.
	(doc): Maybe check its status.
	(info_dir): New function.
	* dir_top: New file.

2013-12-11  Paul Eggert  <eggert@cs.ucla.edu>

	Remove the option of using libcrypto.
	* merge-gnulib: Remove lib/gl_openssh.h and m4/gl-openssl.m4.

2013-12-04  Eli Zaretskii  <eliz@gnu.org>

	* unidata/unidata-gen.el (unidata-prop-alist): Update bidi-class
	to include the new isolate-related classes introduced with Unicode
	v6.3.
	(unidata-encode-val): Accept an additional optional argument, a
	warning message to emit when UnicodeData.txt defines bidi-class
	values that are not in unidata-prop-alist.  Add a comment
	explaining what should maintainers do if/when such a warning ever
	appears.
	(unidata-gen-table): Call unidata-encode-val with 3rd arg non-nil
	when generating uni-bidi.el.

2013-12-01  Glenn Morris  <rgm@gnu.org>

	* unidata/Makefile.in (${DSTDIR}/charprop.el):