@@ -1,3 +1,9 @@
+2013-12-24  Xue Fuqiao  <xfq.free@gmail.com>
+
+	* admin.el (add-release-logs):
+	(set-version-in-file, set-version, set-copyright):
+	Use `user-error'.
+
 2013-12-22  Eli Zaretskii  <eliz@gnu.org>
 
 	* unidata/unidata-gen.el (unidata-split-name): Don't give any NAME
